# ParticleX

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  a.out  border.hpp  domain.hpp  main.cpp  particle.hpp  sle.hpp  solver.hpp  standarts.hpp  types.hpp  vector.hpp
test/: ft.txt  nmap.py  nmap2.py  pyvis.py  res2.txt  res4.txt  vise.py
